--- a/index.css
+++ b/index.css
@@ -1,7 +1,19 @@
 #interruttore {
 	
 	
-	text-align: center;	
+	text-align: center;
+    position: absolute;
+    top: 5%;
+    left: 5%;	
 	
+	
+}
+
+#visualizzaInterruttore {
+	
+	text-align: center;
+    position: absolute;
+    top: 5%;
+    left: 20%;	
 	
 }
