--- a/index.css
+++ b/index.css
@@ -2,6 +2,18 @@
 body {
 	
 	font-family:georgian;
+	background-image: url("concept2.jpg");
+	background-size:     cover;  
+	background-repeat:   no-repeat;
+    background-position: center center; 
+	color: white;
+	
+}
+
+span {
+	
+	padding-left: 15%;
+	
 	
 }
 
@@ -9,6 +21,7 @@ h3 {
 	
 	text-align:center;
 	padding-bottom: 10px;
+	color: white;
 	
 }
 
@@ -27,7 +40,7 @@ h3 {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: red;
+  background-color: gray;
   -webkit-transition: .4s;
   transition: .4s;
 }
@@ -71,3 +84,4 @@ input:checked + .slider:before {
 	text-align:center;	
 	
 }
+
