--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ body {
 	background-attachment:fixed;
     background-position: center center; 
 	color: white;
+	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 	
 }
 
@@ -103,7 +104,6 @@ text-align: center;
 
 #sensoreLivello {
 	
-	color: black;
 	text-align: center;
 	
 	
