--- a/menu.css
+++ b/menu.css
@@ -58,6 +58,7 @@ body {
   width: 100%;
   height: 100%;
   position: absolute;
+  border-radius: 20px;
   z-index: 2;
   font-size: 3em;
   text-align: center;
