--- a/menu.css
+++ b/menu.css
@@ -11,7 +11,10 @@ body {
 	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 	
 }
-
+#LogoIndex{
+    text-align:center;
+  
+}
 #titolo {
 	
 	text-align:center;
